--- a/links.html
+++ b/links.html
@@ -13,7 +13,7 @@
     <ul>
       <!-- Add <li> elements here -->
       <li>Absolute links, like to
-        <a href="https://developer.mozilla.org/ru/docs/Web/HTML"> Mozilla developer network</a>,
+        <a href="https://developer.mozilla.org/ru/docs/Web/HTML" target="_blank"> Mozilla developer network</a>,
         which is a very good resource for Web developers.
       </li>
       <li>Relative links, like to our <a href="misc/extras.html"</a>extras page.</li>
